# NexFlow-AI-Repl

./: .gitattributes  .replit  LOCAL_SETUP.md  README.md  SPEC_AUDIT.md  nexflow-api-map.md  nexflow-company-document.md  nexflow-enrichment-sources.md  nexflow-waterfall-sources.md  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix  skills-lock.json
.agents/: agent_assets_metadata.toml
attached_assets/: 01-masaar-engine-replication_1778719112829.md  02-masar-database-replication_1778720175485.md  03-prosengine-replication_1778715425782.md  04-ai-database-builder-replication_1778715425784.md  FRAMEWORK_MAP_1779995938483.md  NexFlow_Presentation_Template_1776941293968.pptx  Pasted--1-LEAD-SEGMENTATION-LOGIC-CRITICAL-Rename-Redefine-For_1776997432660.txt  Pasted--Almarai-Company-Saudi-B2B-Intelligence-Report-Classifi_1778711528547.txt  Pasted--NexFlow-Web-App-Tab-Restructure-Scope-Restructure-the-_1776995947329.txt  Pasted--ProspectSA-Complete-Framework-Map-Agentic-Web-Engine-P_1779952395051.txt  Pasted--doctype-html-html-lang-en-head-meta-charset-utf-8-meta_1779960374984.txt  Pasted--doctype-html-html-lang-en-head-meta-charset-utf-8-meta_1779960698629.txt  Pasted--doctype-html-html-lang-en-head-meta-charset-utf-8-meta_1779964164430.txt  Pasted--doctype-html-html-lang-en-head-meta-charset-utf-8-meta_1779982930935.txt  Pasted-Build-NexFlow-a-universal-AI-native-B2B-CRM-monorepo-ST_1776941221080.txt  Pasted-Build-NexFlow-an-AI-native-sales-operating-system-that-_1776941365848.txt  README_1776941293968.txt  REPLIT_1779959137045.md  scraper_1778709958128.ts  (+19 more)
(+646 files in other folders)
