[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "lxml>=6.1.0",
    "markdown>=3.10.2",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.46.0",
    "weasyprint>=68.1",
]
